# GO-with-RL

./: CMakeLists.txt  LICENSE  Makefile  README.md
dependencies/glad/: glad.h
src/: config.hpp  glad.c  main.cpp
src/shaders/: vertex.h
